# visionflow-

./: .env.example  .gitignore  LICENSE  Makefile  README.md  check_mimo_models.py  check_providers.py  docker-compose.yml  pyproject.toml  start.bat
docs/: architecture.md  comfyui_setup.md  roadmap.md
frontend/: index.html
src/visionflow/: __init__.py  config.py  main.py
src/visionflow/agents/: story_agent.py  tts_agent.py  workflow_agent.py
src/visionflow/api/: __init__.py  routes.py
src/visionflow/comfyui/: __init__.py  client.py  monitor.py  node_registry.py  workflow_builder.py  workflow_loader.py
src/visionflow/memory/: __init__.py  memory_manager.py
src/visionflow/models/: __init__.py  intent.py  task.py
src/visionflow/pipelines/: __init__.py  image_pipeline.py  video_pipeline.py
tests/: test_comfyui_client.py  test_workflow_builder.py
workflows/: README.md
workflows/composite/: product_photo.json
workflows/image/: controlnet_pose.json  ipadapter_face.json  txt2img_flux.json  txt2img_sdxl.json
workflows/video/: img2video_svd.json  img2video_wan.json  txt2video_animatediff.json
